# guitar-solo-part-generator

./: .dockerignore  .gitignore  API.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  gspg-config.yml  rules-sgg.txt  wsjcpp.yml
src/: guitar_solo_part_generate_filters.cpp  guitar_solo_part_generate_filters.h  guitar_solo_part_generator_enums.cpp  guitar_solo_part_generator_enums.h  guitar_solo_part_generator_finger_position.cpp  guitar_solo_part_generator_finger_position.h  guitar_solo_part_generator_movement_rules.cpp  guitar_solo_part_generator_movement_rules.h  main.cpp  position_note_guitar.cpp  position_note_guitar.h  solo_part_guitar.cpp  solo_part_guitar.h  solo_part_guitar_rule.cpp  solo_part_guitar_rule.h  solo_part_guitar_rules.cpp  solo_part_guitar_rules.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/wsjcpp_core/: wsjcpp.hold.yml  wsjcpp_core.cpp  wsjcpp_core.h
src.wsjcpp/wsjcpp_light_web_server/: wsjcpp.hold.yml  wsjcpp_light_web_http_request.cpp  wsjcpp_light_web_http_request.h
src/server/: http_handler_available_filters.cpp  http_handler_available_filters.h  http_handler_movement_rules.cpp  http_handler_movement_rules.h  http_handler_solo_generate.cpp  http_handler_solo_generate.h
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_movement_rules.cpp  unit_test_movement_rules.h  unit_test_note_guitar_converter.cpp  unit_test_note_guitar_converter.h  unit_test_parse_rule.cpp  unit_test_parse_rule.h  unit_test_position_note_guitar.cpp  unit_test_position_note_guitar.h
web/: index.html
web/css/: index.css
web/js/: TabulaturEditor.js  createWaves.js  index.js  jsmidgen.js  renderTabulatur.js
